--- a/index.html
+++ b/index.html
@@ -20,6 +20,17 @@
             <li>Para efectos practicos escribimos lo importante</li>
             <li>Prácticamos</li>
         </ol>
-    </article> 
+    </article>
+    <h3>Formulario</h3>
+    <p>En esta sección se requieren estos datos para continuar</p>
+    <form>
+        <div>
+            <input type="text" name="nombre" placeholder="Ingrese su nombre">
+        </div>    
+        <div>
+            <label for="apellido">Apellido</label>
+            <input type="text" name="apellido">
+        </div>
+    </form> 
 </body>
 </html>
